# faf

./: .gitignore  Cargo.toml  LICENSE  README.md  REF.md  merged.profdata  rustfmt.toml
benches/: benches.rs  perf.rs
docker/: faf-clearlinux.dockerfile  faf-debian.dockerfile  fafv2.dockerfile  fafv3.dockerfile
src/: const_config.rs  const_http.rs  const_sys.rs  epoll.rs  extern_http_date.rs  http_content_length.rs  http_date.rs  http_request_path.rs  lib.rs  listener.rs  main.rs  net.rs  syscall.rs  util.rs
tests/: wrk-competition.sh  wrk-debug.sh  wrk-long.sh  wrk-poc-competition.sh  wrk-poc.sh  wrk-simple.sh
