[package]
name = "faf"
version = "0.1.1"
authors = ["James Bates <errantmind@protonmail.com>"]
edition = "2018"

[features]
default = []
faf_debug = []

[profile.release]
opt-level = 3
panic = 'unwind'
codegen-units = 1
lto = "thin"
debug = false
#rpath = false
overflow-checks = false


[dependencies]
faf-pico-sys = { git = "https://github.com/errantmind/faf-pico-sys" }
sys-call = { git = "https://github.com/errantmind/sys-call-rs" }
num_cpus = "*"


#[dev-dependencies]
# criterion = { version = "*", default-features = false }
# pprof = { version = "*", features = ["flamegraph"] }
# rand = { version = "*", default-features = true }

# [profile.bench]
# opt-level = 3
# codegen-units = 1
# lto = true
# debug = true
# overflow-checks = false

# [[bench]]
# name = "benches"
# harness = false
